# MACS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
macs/: __init__.py
macs/application/: __init__.py  consensus.py  factory.py  orchestrator.py
macs/domain/: __init__.py  entities.py  enums.py  exceptions.py  interfaces.py  thought_trace.json
macs/infrastructure/: __init__.py  config.py
macs/infrastructure/container/: __init__.py  docker_client.py
macs/infrastructure/integration/: __init__.py  websocket_provider.py
macs/infrastructure/persistence/: __init__.py  mappers.py  models.py  repository.py  uow.py
macs/infrastructure/vcs/: __init__.py  git_manager.py
tests/: __init__.py  test_config.py  test_consensus_engine.py  test_docker_client.py  test_git_manager.py  test_orchestrator.py
